fix blocks not wrapping, changed final button color

--- a/src/custom.css
+++ b/src/custom.css
@@ -1,3 +1,7 @@
+#root {
+    max-width: 100%;
+}
+
 .flexCol {
     flex-direction: column;
     display: flex;
@@ -31,3 +35,5 @@
     width:15%;
     padding:.35em 0;
 }
+
+.greenBtn{background-color:forestgreen;}
